# PPN-Cancer-IA

./: .gitignore  CMakeLists.txt  README.md  topo.cpp
.cache/clangd/index/: activations.cpp.98AA379C426F31FF.idx  activations.h.A22224459488E491.idx  convolution.cpp.4562ADDC5E820900.idx  convolution.h.B3C3967D5ED16A20.idx  image.cpp.AB9E08B4DE09460B.idx  image.h.6D8110C1410FDD4C.idx  main.cpp.B930230B799AB2B8.idx  network.cpp.A648BF3808E1B59A.idx  network.h.92EC61C378FA46A5.idx  tools.cpp.6996527E6CC652EA.idx  tools.h.E49309C104C17C3F.idx
assets/: output.csv
assets/PBM/: test_1 (6e copie).pbm
data/: loss_accuracy_epoch.data
include/: activations.h  const.h  conv_op.h  convolution.h  image.h  layer.h  matrice.h  network.h  nn.h  tools.h  topo.h
include/layers/: activation.h  convolution.h  dense.h  layer.h  output.h  outputlayer.h  pooling.h
include/layers/activations/: activation.h  relu.h  sigmoid.h  softmax.h
include/lossFunctions/: crossEntropy.h  loss.h  mse.h
src/: activations.cpp  conv_op.cpp  convolution.cpp  image.cpp  input.ppm  layer.cpp  main.cpp  matrice.cpp  network.cpp  nn.cpp  tools.cpp  topo.cpp
src/layers/: activation.cpp  convolution.cpp  dense.cpp  layer.cpp  output.cpp  outputlayer.cpp  pooling.cpp
src/layers/activations/: activation.cpp  relu.cpp  sigmoid.cpp  softmax.cpp
src/lossFunctions/: crossEntropy.cpp  loss.cpp  mse.cpp
test/: tests.cpp
